@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: PyRECONSTRUCT
-Version: 1.2.1
+Version: 1.2.2
 Summary: Python tools for interacting with XML files associated with RECONSTRUCT
 Home-page: https://github.com/wtrdrnkr/pyrecon
 Author: Michael Musslewhite
